<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/dark_magneta"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/text_lets_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/cabin"
        android:text="@string/lets_get_started"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/type_your_name"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/cabin"
        android:text="@string/save"
        android:textColor="@color/dark_magneta"
        android:textStyle="bold" />

</RelativeLayout>