<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/relative_header"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/dark_magneta"
        >
        <ImageView
            android:id="@+id/image_infinity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:src="@drawable/infinity"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            />
        <ImageView
            android:id="@+id/image_emotion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            android:src="@drawable/emotion"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            />
        <ImageView
            android:id="@+id/image_sun"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="38dp"
            android:src="@drawable/sun"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="14sp"
        />
    <TextView

        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/phrase"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        />
    <View
        android:id="@+id/view_dash"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:background="@color/dark_magneta"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/button_click"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:text="@string/new_phrase"
        android:layout_marginTop="184dp"
        android:backgroundTint="@color/dark_magneta"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>